// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it is a button displays a secondary variant 1`] = `
<button
  class="border-2 group px-2 py-1 font-regular rounded-sm self-start hover:underline hover:border-theme-interact-hover font-bold inline-flex self-start items-center border-theme-interact hover:text-theme-interact-hover"
  type="button"
>
  Click me
</button>
`;

exports[`it is a button displays as a <button> 1`] = `
<button
  class="border-2 group px-2 py-1 font-regular rounded-sm self-start hover:underline hover:border-theme-interact-hover font-bold inline-flex self-start items-center border-theme-interact bg-theme-interact text-theme-bg hover:bg-theme-interact-hover"
  type="button"
>
  Click me
</button>
`;
